fixed the issue where chatbot prompt and response invisible. adjusted the chatbot size.

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -17,7 +17,7 @@ body, html {
   
   /* Chat Card Styling */
   .card {
-	height: 750px;
+	height: 600px;
 	width: 2500px;
 	border-radius: 15px !important;
 	background: linear-gradient(135deg, rgb(0, 93, 143), rgb(0, 39, 61));
